--- a/group2ict.html
+++ b/group2ict.html
@@ -2,17 +2,10 @@
 <html>
 <head>
 <title>Group 2 The Best</title>
-<meta name= "description" content="A joke made by a student for their ICT project and favorite game." >
-<meta namw="keywords" content="submit site, submit, site" >
-<style>
-	body{border:double thick #0893cf;background-image: url(https://scontent.fmnl13-2.fna.fbcdn.net/v/t1.15752-9/345212093_783885193464939_644362568748477280_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=ae9488&_nc_eui2=AeG-QRpsPRlRWIk-SdJ_pd8xwTW5cKEeIzTBNblwoR4jNNWeAkvsyY_tMymDZXD3BE2nI_M0aIPffObWP38rHFI4&_nc_ohc=MYUvR14ug6MAX9L0pAK&_nc_ht=scontent.fmnl13-2.fna&oh=03_AdQisqkul6YkhiN0ssIQ6Q5DBz7IoDxbE2LJVNwyl8USbg&oe=649BE5E9); background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;margin-left:1in;margin-right:1in;margin-top:1in;margin-bottom:3in;padding-left:50px; 
-	padding-right:50px;padding-bottom:100px}
-	h1{color:purple; text-align:center; font-family: cooper black;font-size: 0.3.1in} 
-	h2{color:purple; text-align:center; font-family:broadway;font-size: 0.2in} 
-	p.content{text-align:center;font-family: times new roman;font-size: 0.25in;color:#444444} 
-	p.chorus{text-align:center;font-family: times new roman;font-size:0.25in;color:Black} 
-	p#singer{text-align:center;font-family:times new roman; font-size:0.25in;color:maroon} 
-</style> </head>
+<meta name= "description" content="A joke made by a student for their ICT project." >
+<meta name="keywords" content="submit site, submit, site" >
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
 <h1>Group 2 ICT</h1>
 
