--- a/group2ict.html
+++ b/group2ict.html
@@ -4,6 +4,7 @@
 <title>Group 2 The Best</title>
 <meta name= "description" content="A joke made by a student for their ICT project." >
 <meta name="keywords" content="submit site, submit, site" >
+<meta name="msvalidate.01" content="68E20C47B8D8B6CE30AE832EAF6BEF32" />
 <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
