--- a/group2ict.html
+++ b/group2ict.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-<h1>Group 2 ICT</h1>
+<h1>Group 2 ICT EROS</h1>
 
 <h2>Mallari, Micka Angela</h2>
 <h2>Sta. Mina, Yuvia</h2>
